[tool.poetry]
name = "pyls"
version = "0.1.0"
description = "A Python script to list directory contents in a style similar to 'ls'."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.scripts]
pyls = "pyls:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
